--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <a href="#">Blog</a>
             <a href="#">Contact</a>
         </nav>
-        <img class='header-img' src='img/jumbo.jpg'>
+        <header>
+            <img class='header-img' src='img/jumbo.jpg'>
+        </header>
         <section class="top-content">
             
             <div class="text-container">
